--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
-# .travis.yml
 language: php
+
 php:
   - 5.5
-  - 5.4
-  - 5.3
+  - 5.6
+  - 7.0
+  - hhvm
+
+sudo: false
 
 matrix:
   allow_failures:
-    - php: 5.5
+    - php: 7.0
+    - php: hhvm
 
 install:
   - curl -s http://getcomposer.org/installer | php
