--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "satooshi/php-coveralls": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
-        "satooshi/php-coveralls": "^0.7.1"
+        "phpspec/phpspec": "~2.1"
     },
     "autoload": {
         "classmap": [
