--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "laravel/socialite": "^2.0",
         "satooshi/php-coveralls": "^1.0",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "jrm2k6/cloudder": "0.2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
