--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/socialite": "^2.0",
         "satooshi/php-coveralls": "^1.0",
         "doctrine/dbal": "^2.5",
-        "jrm2k6/cloudder": "0.2.*"
+        "jrm2k6/cloudder": "0.2.*",
+        "guzzlehttp/guzzle": "^6.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
