--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "laravel/socialite": "2.0.11",
+        "laravel/socialite": "~2.0",
         "satooshi/php-coveralls": "^1.0",
         "doctrine/dbal": "^2.5",
         "jrm2k6/cloudder": "0.2.*",
