--- a/composer.json
+++ b/composer.json
@@ -36,25 +36,25 @@
         ]
     },
     "scripts": {
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
-        "post-update-cmd": [
-            "php artisan optimize",
-            "php artisan migrate"
-        ],
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
-        ]
-    },
-    "config": {
-        "preferred-install": "dist"
-    }
+       "post-install-cmd": [
+           "php artisan clear-compiled",
+           "php artisan optimize",
+           "php artisan migrate --force"
+       ],
+       "pre-update-cmd": [
+           "php artisan clear-compiled"
+       ],
+       "post-update-cmd": [
+           "php artisan migrate"
+       ],
+       "post-root-package-install": [
+           "php -r \"copy('.env.example', '.env');\""
+       ],
+       "post-create-project-cmd": [
+           "php artisan key:generate"
+       ]
+   },
+   "config": {
+       "preferred-install": "dist"
+   }
 }
