--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,7 @@
     "scripts": {
        "post-install-cmd": [
            "php artisan clear-compiled",
-           "php artisan optimize",
-           "php artisan migrate --force"
+           "php artisan optimize"
        ],
        "pre-update-cmd": [
            "php artisan clear-compiled"
