--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "satooshi/php-coveralls": "^1.0",
         "doctrine/dbal": "^2.5",
         "jrm2k6/cloudder": "0.2.*",
-        "nesbot/carbon": "^1.21"
+        "nesbot/carbon": "^1.21",
+        "embed/embed": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
