--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.5
   - 5.6
   - 7.0
+  - 7.2.5
   - hhvm
 
 sudo: false
@@ -12,6 +13,9 @@ matrix:
   allow_failures:
     - php: 7.0
     - php: hhvm
+    - php: 5.5
+    - php: 5.6
+    - php: 7.0
 
 install:
   - curl -s http://getcomposer.org/installer | php
