--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ script:
   - mkdir -p build/logs
   - php vendor/bin/phpunit -c phpunit.xml
 
-after_success:
-  - travis_retry php vendor/bin/coveralls
+#after_success:
+  #- travis_retry php vendor/bin/coveralls
